<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".ui.discover.DiscoverFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/sv_discover"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/lt_title_popular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_title_popular"
                    style="@style/title_carrousel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_title_popular" />

                <ImageView
                    style="@style/title_carrousel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_forward_white"
                    android:tint="@android:color/white" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_popular"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" />


            <LinearLayout
                android:id="@+id/lt_title_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_title_top_rated"
                    style="@style/title_carrousel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_title_top_rated" />

                <ImageView
                    style="@style/title_carrousel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_forward_white"
                    android:tint="@android:color/white" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_top_rated"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" />

            <LinearLayout
                android:id="@+id/lt_title_upcoming"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_title_upcoming"
                    style="@style/title_carrousel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_title_upcoming" />

                <ImageView
                    style="@style/title_carrousel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_forward_white"
                    android:tint="@android:color/white" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_upcoming"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" />

            <TextView
                android:id="@+id/tv_title_discover"
                style="@style/title_carrousel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_title_discover" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_discover_movies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</RelativeLayout>